# AI-Agentic-ETL-Optimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  design_specification.md  docker-compose.yml  logging_config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: graph.py  state.py
agent/nodes/: artifact_packager.py  code_parser.py  compliance_engine.py  diff_generator.py  pii_scanner.py  rewriter.py  validator.py
agent/tools/: spark_runner.py
compliance/: pii_patterns.py  rules.py
compliance/profiles/: gdpr.json  hipaa.json  sox.json
db/: models.py  repository.py
db/migrations/: 001_initial.sql
prompts/: system_v1.txt
tests/: conftest.py  test_agent_graph.py  test_compliance_engine.py  test_db_repository.py  test_input_sanitizer.py  test_pii_scanner.py  test_spark_validator.py
tests/fixtures/: sample_prefect.py  sample_pyspark.py
ui/: components.py  session_state.py
validation/: input_sanitizer.py  spark_sandbox.py
